# DrugRepurposing

./: .gitignore  GTEX_TISSUE_LIST.md  HOW_TO_USE.md  KEGG.gitignore  LICENSE  MANIFEST.txt  README.md  Sirolimus_BrainCortex.md  Sirolimus_Liver.md  examples.csv  main.py  plot_results.R  pyproject.toml  requirements.txt
api_clients/: __init__.py  chembl.py  gtex.py  kegg.py  mygene.py  ncbi.py  opentargets.py  pubchem.py  string_db.py
core/: __init__.py  analyzer.py  models.py  simulation.py  synergy.py  visualizer.py  visualizer_network.py  visualizer_sankey.py
results/: Aspirin.csv  Aspirin.md  Ibuprofen.md  Metformin.md  Minoxidil.md  Semagacestat.md  Sirolimus.md  Thalidomide.md  ['Aspirin', 'Ibuprofen'].csv  ['Aspirin', 'Ibuprofen'].md  aspirin + ibuprofen_sankey_flow.html  aspirin_final.csv  aspirin_final.md
results/Alzheimer/: NIROGACESTAT HYDROBROMIDE.md  PRI-724.md  RG-4733.md
scratch/: debug_drivers.py  debug_ids.py  test_discovery.py
