[project]
name = "KEGG-ID"
version = "0.1.0"
description = "A professional drug-to-pathway discovery tool for biological network analysis."
authors = [{name = "Konstantinos"}]
dependencies = [
    "requests>=2.31.0",
    "pandas>=2.2.1",
    "biopython>=1.83",
    "networkx>=3.2.1",
    "rich>=13.7.1",
    "lxml>=5.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ['py310']
